# prefect-slurm

./: README.md  pyproject.toml
.github/workflows/: release.yaml
prefect_slurm/: config.py  worker.py
tests/: conftest.py  test_worker.py
