[project]
name = "prefect-slurm"
version = "0.1.4"
description = "Prefect worker for running flows on a Slurm HPC cluster"
authors = [
    {name = "Aleksandar Rajkovic",email = "aleksandar@ebi.ac.uk"},
    {name = "Sandy Rogers",email = "sandyr@ebi.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prefect (>=3.4.13,<4.0.0)",
    "aiofiles (>=23.0.0)",
    "click (>=8.0.0)",
    "ebi-slurpy (>=0.1.1,<0.2.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "watchdog>=6.0.0",
    "testcontainers>=4.12.0",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest-cov>=6.2.1"
]

[project.entry-points."prefect.collections"]
prefect_slurm = "prefect_slurm.worker"

[project.scripts]
prefect-slurm = "prefect_slurm.cli:cli"

[tool.uv]
package=true

[tool.setuptools]
packages = ["prefect_slurm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests (run with '-m unit')",
    "cli: marks tests as tests for cli (run with '-m cli')",
    "settings: marks tests as tests for settings (run with '-m settings')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
